--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pl">
 <head>
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <div id="root"></div>
